Stop my eyes from burning by adding a dark theme

--- a/src/main/webapp/admin/loginError.xhtml
+++ b/src/main/webapp/admin/loginError.xhtml
@@ -18,7 +18,7 @@
                             <p:outputLabel value='Username: ' for="j_username"/>
                         </p:column>
                         <p:column>
-                            <p:inputText id='j_username' name='j_username'/>
+                            <p:inputText id='j_username' name='j_username' autocomplete="username"/>
                         </p:column>
                     </p:row>
                     <p:row styleClass="ui-no-border">
@@ -26,7 +26,7 @@
                             <p:outputLabel value='Password: ' for="j_password"/>
                         </p:column>
                         <p:column>
-                            <p:inputText type='password' id='j_password' name='j_password'/>
+                            <p:inputText type='password' id='j_password' name='j_password' autocomplete="current-password"/>
                         </p:column>
                     </p:row>
                     <p:row styleClass="ui-no-border">
