--- a/src/main/webapp/admin/login.xhtml
+++ b/src/main/webapp/admin/login.xhtml
@@ -17,7 +17,7 @@
                             <p:outputLabel value='Username: ' for="j_username"/>
                         </p:column>
                         <p:column>
-                            <p:inputText id='j_username' name='j_username'/>
+                            <p:inputText id='j_username' name='j_username' autocomplete="username"/>
                         </p:column>
                     </p:row>
                     <p:row styleClass="ui-no-border">
@@ -25,7 +25,7 @@
                             <p:outputLabel value='Password: ' for="j_password"/>
                         </p:column>
                         <p:column>
-                            <p:inputText type='password' id='j_password' name='j_password'/>
+                            <p:inputText type='password' id='j_password' name='j_password' autocomplete="current-password"/>
                         </p:column>
                     </p:row>
                     <p:row styleClass="ui-no-border">
