--- a/src/main/webapp/resources/template.xhtml
+++ b/src/main/webapp/resources/template.xhtml
@@ -9,36 +9,40 @@
     <h:outputStylesheet name="styles.css" library="css"/>
 </h:head>
 <h:body>
-    <div style="display: flex; flex-direction: column;">
-        <div id="header">
-            <p:outputPanel><h1>#{pageTitle}</h1></p:outputPanel>
-        </div>
-        <div style="display: flex;">
-            <div id="left">
-                <ui:insert name="left">
-                    <h:form>
-                        <p:menu>
-                            <p:submenu label="Admin">
-                                <p:menuitem value="Tweets" outcome="/admin/tweets.xhtml" icon="fa fa-twitter"/>
-                                <p:menuitem value="Users" outcome="/admin/users" icon="fa fa-user"/>
-                            </p:submenu>
-                            <p:submenu label="Session">
-                                <p:menuitem value="Logout" actionListener="#{adminController.logout}" icon="fa fa-sign-out"/>
-                            </p:submenu>
-                        </p:menu>
-                    </h:form>
-                </ui:insert>
-            </div>
+    <p:layout fullPage="true">
+        <p:layoutUnit position="center">
+            <div style="display: flex; flex-direction: column;">
+                <div id="header">
+                    <p:outputPanel><h1>#{pageTitle}</h1></p:outputPanel>
+                </div>
+                <div style="display: flex;">
+                    <div id="left">
+                        <ui:insert name="left">
+                            <h:form>
+                                <p:menu>
+                                    <p:submenu label="Admin">
+                                        <p:menuitem value="Tweets" outcome="/admin/tweets.xhtml" icon="fa fa-twitter"/>
+                                        <p:menuitem value="Users" outcome="/admin/users" icon="fa fa-user"/>
+                                    </p:submenu>
+                                    <p:submenu label="Session">
+                                        <p:menuitem value="Logout" actionListener="#{adminController.logout}" icon="fa fa-sign-out"/>
+                                    </p:submenu>
+                                </p:menu>
+                            </h:form>
+                        </ui:insert>
+                    </div>
 
-            <div id="content">
-                <ui:insert name="content"/>
+                    <div id="content">
+                        <ui:insert name="content"/>
+                    </div>
+                </div>
+                <div id="footer">
+                    <ui:insert name="footer">
+                        <p:outputPanel>© 2018 Kwetter</p:outputPanel>
+                    </ui:insert>
+                </div>
             </div>
-        </div>
-        <div id="footer">
-            <ui:insert name="footer">
-                <p:outputPanel>© 2018 Kwetter</p:outputPanel>
-            </ui:insert>
-        </div>
-    </div>
+        </p:layoutUnit>
+    </p:layout>
 </h:body>
 </html>
