--- a/src/main/webapp/admin/tweets.xhtml
+++ b/src/main/webapp/admin/tweets.xhtml
@@ -30,9 +30,16 @@
                         <h:outputText value="#{tweet.flagCount}"/>
                     </p:column>
                     <p:column headerText="Actions">
-                        <p:commandButton icon="fa fa-trash" value="Delete" actionListener="#{adminController.deleteTweet}" update="tweetTable"/>
+                        <p:commandButton icon="fa fa-trash" value="Delete" actionListener="#{adminController.deleteTweet}" update="tweetTable">
+                            <p:confirm header="Delete tweet" message="Are you sure you want to delete tweet #{tweet.id} from @#{tweet.owner.profile.username}?" icon="fa fa-exclamation-circle" />
+                        </p:commandButton>
                     </p:column>
                 </p:dataTable>
+
+                <p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
+                    <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="fa fa-check" />
+                    <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="fa fa-times" />
+                </p:confirmDialog>
             </h:form>
         </ui:define>
     </ui:composition>
